Fixed media wrapped images

--- a/resources/scss/components/_media-wrapper.scss
+++ b/resources/scss/components/_media-wrapper.scss
@@ -34,4 +34,13 @@
 		right: 0;
 		margin: auto;
 	}
+
+	img {
+		position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+	}
 }
